# NeoDev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  improvements.md  neodev.toml.example
docs/: architecture.md  commands.md  configuration.md  installation.md  integration.md
examples/example-backend/: Cargo.toml
examples/example-backend/src/: lib.rs
src/: build.rs  check_deps.rs  clean.rs  config.rs  discovery.rs  image.rs  main.rs  report.rs  run.rs  test_.rs
src/automation/: mod.rs  qemu.rs  serial.rs  vbox.rs
src/vmm/: mod.rs  qemu.rs  vbox.rs
src/vmm/plugin/: abi.rs  backend.rs  loader.rs  mod.rs
