[package]
name = "neodev"
version = "0.2.0"
edition = "2021"
description = "NeoDOS Development Tool — unified build, image, run, test, and CI toolchain"
authors = ["NeoDOS-Project"]
repository = "https://github.com/NeoDOS-Project/NeoDev"
license = "MIT"
keywords = ["neodos", "osdev", "build-tool", "virtualization"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "neodev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
walkdir = "2"
